package items;

public enum WeaponType {
    Axe, Bow, Dagger, Hammer, Staff, Sword, Wand
}
