package items;

public enum EquipmentSlot {
    Weapon, Head, Body, Legs
}
